# blackhole

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
examples/: anthropic_agent_loop.py  openai_agent_loop.py
src/blackhole_io/: __init__.py  blackhole_file.py  cli.py
src/blackhole_io/adapters/: __init__.py  abstract.py  factory.py  gcp_adapter.py  local_adapter.py  s3_adapter.py
src/blackhole_io/configs/: __init__.py  abstract.py  gcp.py  loader.py  local.py  s3.py
src/blackhole_io/fastapi/: __init__.py  uploader.py
src/blackhole_io/store/: __init__.py  abstract.py  factory.py  models.py  sql_store.py
src/blackhole_io/tools/: __init__.py  anthropic.py  base.py  openai.py
tests/: test_blackhole_put.py  test_env_config.py  test_factory.py  test_local_adapter.py  test_logger.py  test_s3_adapter.py  test_tools_anthropic.py  test_tools_openai.py  test_yaml_config.py
tests/adapters/: conftest.py  test_local_delete.py  test_local_exists.py  test_local_get.py  test_local_put.py  test_local_put_all.py  test_s3_delete.py  test_s3_exists.py  test_s3_get.py  test_s3_put.py  test_s3_put_all.py
tests/store/: test_sql_store.py
